# second-life-mcp-server

./: README.md  pyproject.toml  server.py
data/: pitfalls.json
db/: lsl.db  schema.sql
scripts/: add_pitfall.py  load_db.py  scrape_wiki.py
tests/: conftest.py  test_add_pitfall.py  test_lookup.py  test_pitfalls.py  test_reference.py
tools/: lookup.py  pitfalls.py  reference.py
