[project]
name = "lsl-mcp"
version = "0.1.0"
description = "MCP server providing authoritative LSL reference data and AI pitfall detection for Second Life scripting"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=3.2.4",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
lsl-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

# ── uv ────────────────────────────────────────────────────────────────────────
# If using uv (recommended), run the server with:
#   uv run server.py
# Or register with Claude Code:
#   claude mcp add --transport stdio lsl -- uv run /path/to/lsl-mcp/server.py

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

# ── ruff (optional linting) ───────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
